MyDevOrgData/src/objects/LinkedIn_App_Form__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(DOB__c),YEAR(TODAY())-YEAR(DOB__c),IF(AND(MONTH(TODAY())=MONTH(DOB__c),DAY(TODAY())&gt;=DAY(DOB__c)),YEAR(TODAY())-YEAR(DOB__c),(YEAR(TODAY())-YEAR(DOB__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIty__c</fullName>
        <label>CIty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>WDC</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Shangai</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
                <value>
                    <fullName>Kawasaki</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailId__c</fullName>
        <defaultValue>&apos;test@test.com&apos;</defaultValue>
        <label>EmailId</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <defaultValue>&apos;Kishan&apos;</defaultValue>
        <label>FirstName</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName__c  + &quot; &quot; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <defaultValue>&apos;GR&apos;</defaultValue>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_del__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technologies_Known__c</fullName>
        <label>Technologies Known</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>.NET</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LinkedIn App Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LinkedIn App Forms</pluralLabel>
    <recordTypes>
        <fullName>Status_Complete</fullName>
        <active>true</active>
        <label>Status Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>abc</fullName>
        <active>true</active>
        <label>abc</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>